FEND-1133: fixing the z-index of light and broken searchresult page active button colors

--- a/webapp/src/main/webapp/css/global.css
+++ b/webapp/src/main/webapp/css/global.css
@@ -4233,7 +4233,7 @@ legend.conjunction span {
   width: 870px;
   overflow: hidden;
   position: fixed;
-  z-index: 150;
+  z-index: 1000;
 }
 
 #fig-viewer .header {
